--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@
     box-sizing: border-box;
 }
 
-:root{
-
+:root{  
+    
 }
 
 body{
-    background-color: black;
-    color: wheat;
+    background-color:black;
+    color: white;
 }
 
 .nav{
@@ -20,15 +20,28 @@ body{
     align-items: center;
     height: 100px;
 }
+
 .app-name h1{
     font-size: 4vw;
 }
 
+.theme_change{
+    border: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+}
 .nav-left-container{
-    width: 60%;
+    /* background-color: red; */
+    width: 80%;
     display: flex;
-    justify-content: space-evenly;
+    gap: 40px;
+    justify-content: space-around;
     align-items: center;
+}
+.right{
+    width: 20%;
+    /* background-color: red; */
 }
 .themes  option{
     outline: none;
@@ -40,9 +53,9 @@ body{
     /* appearance: none; */
     background-color: transparent;
     border: none;
-    padding: 0 1em 0 0;
+    /* padding: 0 1em 0 0; */
     margin: 0;
-    width: 100%;
+    width: 80%;
     font-family: inherit;
     font-size: inherit;
     cursor: inherit;
